# sirkus

./: .clang-format  .clang-tidy  .clang-uml  .clangd  .editorconfig  .gitignore  .gitmodules  .tool-versions  CMakeLists.txt  CMakePresets.json  KNOWLEDGE.md  Makefile  Sirkus.jucer  SourceFiles.cmake  architecture.html  architecture.md
cmake/: cpm.cmake  juce-defaults.cmake  macos-defaults.cmake  sanitizers.cmake  shared-code-defaults.cmake  xcode-prettify.cmake
diagrams/: sirkus_class_diagram.json  sirkus_class_diagram.mmd  sirkus_class_diagram.puml
notes/: DATA-STRUCTURES.md  LLM-CONVENTIONS.md  PLANNING.md  STEP-COMPONENT-PLAN.md  TRACK-REFACTOR.md
notes/Sirkus/: ValueTreeView - UI Component Pattern.md
notes/Sirkus/.obsidian/: app.json  graph.json  workspace.json
notes/Sirkus/.obsidian/plugins/mermaid-tools/: data.json
scripts/: cmake-update-source-files.sh
src/: Constants.h  Identifiers.h  InternalTransport.cpp  InternalTransport.h  JuceHeader.h  MidiEventGenerator.cpp  MidiEventGenerator.h  Pattern.cpp  Pattern.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Scale.cpp  Scale.h  Sequencer.cpp  Sequencer.h  Step.h  StepProcessor.cpp  StepProcessor.h  TimingInfo.cpp  TimingInfo.h  TimingManager.cpp  TimingManager.h  Track.cpp  Track.h  Types.h
src/core/: InternalTransport.cpp  InternalTransport.h  Pattern.cpp  Pattern.h  Scale.cpp  Scale.h  Sequencer.cpp  Sequencer.h  Step.cpp  Step.h  StepProcessor.cpp  StepProcessor.h  TimingInfo.cpp  TimingInfo.h  TimingManager.cpp  TimingManager.h  Track.cpp  Track.h  TriggerBuffer.cpp  TriggerBuffer.h  Types.h  ValueTreeObject.h
src/jucex/valuetree/: VariantConverter.h
src/ui/: GlobalControls.cpp  GlobalControls.h  MidiEventLog.cpp  MidiEventLog.h  PatternTrack.cpp  PatternTrack.h  PatternView.cpp  PatternView.h  PatternViewConfig.h  SirkusLookAndFeel.cpp  SirkusLookAndFeel.h  StepButton.cpp  StepButton.h  StepComponent.cpp  StepComponent.h  StepControls.cpp  StepControls.h  StepTrack.cpp  StepTrack.h  TrackPanel.cpp  TrackPanel.h  TrackPanelConfig.h  TransportControls.cpp  TransportControls.h  UI-ARCHITECTURE.md  ValueTreeView.h
utils/: AudioPluginHost.sh  Sirkus_AU.filtergraph  Sirkus_VST3.filtergraph
